add json parser to sse data